# fory

.github/workflows/: ci.yml
compiler/fory_compiler/: cli.py
compiler/fory_compiler/generators/: rust.py
compiler/fory_compiler/ir/: ast.py
compiler/fory_compiler/tests/: test_generated_code.py
examples/java/: pom.xml
examples/java/src/main/java/: NegativeDurationDemo.java
rust/: Cargo.toml
rust/fory-core/src/meta/: type_meta.rs
rust/fory-core/src/resolver/: meta_string_resolver.rs
rust/fory/examples/: deserialize_duration.rs
rust/fuzz/: .gitignore  Cargo.toml  README.md
rust/fuzz/fuzz_targets/: field_info.rs  meta_string.rs  type_meta.rs
rust/tests/tests/: test_meta.rs
